--- a/tests/dummy/app/templates/components/tab-index-example.hbs
+++ b/tests/dummy/app/templates/components/tab-index-example.hbs
@@ -11,7 +11,7 @@
     <br/>
     <a href="https://www.w3.org/wiki/RadioButton">See the w3 RadioButton wiki for details</a>
   </p>
-  <input type="text" tabindex="1" value="focus here to start" /> <br/>
+  <input type="text" tabindex="1" aria-label="Placeholder" value="focus here to start" /> <br/>
   <div style="padding: 0.5rem 0;">
     Tab index 4:
     <br/>
@@ -27,7 +27,7 @@
       Green
     </RadioButton>
   </div>
-  <input type="text" tabindex="3" value="tabindex 3" /> <br/>
+  <input type="text" tabindex="3" value="tabindex 3" aria-label="Tab Index" /> <br/>
   <div style="padding: 0.5rem 0;">
     Tab index 2:
     <br/>
@@ -35,5 +35,5 @@
     <RadioButton @name="group2" @tabindex={{2}} @value="medium" @groupValue={{this.size}} /> Medium<br />
     <RadioButton @name="group2" @tabindex={{2}} @value="large" @groupValue={{this.size}} /> Large<br/>
   </div>
-  <input type="text" tabindex="5" value="end here" /> <br/>
+  <input type="text" tabindex="5" value="end here" aria-label="Placeholder" /> <br/>
 </div>
